# incubator

./: .gitignore  README.md
prjs/bclib/backend/: common.c.js  common.h.js  font.h.js  large.c.js  pdf.js  pdf417.c.js  png.c.js  ps.c.js  qr.h.js  reedsol.c.js  sjis.h.js  svg.c.js  zint.h.js
prjs/bclib/frontend/: main.html
prjs/jscc/: index.html
prjs/jscc/jisontry/: c.jison  c.jison~  c.js  codegenerator.js  cpu.js  cpu_bak.js  datastruct.js  datastruct.js~  helloworld.c  helloworld.c~  hw.js  hw_bak.js  loader_bak.js  machine_desc.txt  runtime.js  runtime_bak.js  test.bat  test.bat~  test.html  test_bak.html
prjs/jscc/jisontry/ccode/: stdio.c
prjs/jscc/jisontry/include/: runtime.h  runtime.h~  stdio.h
prjs/jscc/jisontry/spsrc/: version.h
prjs/jscc/js/: jscc.js
prjs/jsspim/js/: instr.js  syscall.js
prjs/lbac/: index.html  index_tiny.html
prjs/maven-plugin/myplugin/: pom.xml
prjs/maven-plugin/plugincons/: pom.xml
prjs/prog/prblm/: svn-commit.2.tmp  svn-commit.3.tmp  svn-commit.tmp
prjs/prog/prblm/clrs/cpp/clrs/: CMakeLists.txt
prjs/prog/prblm/clrs/cpp/clrs/part7/chap32/: CMakeLists.txt  rabin_karp.cpp  rabin_karp.h  rabin_karp_test.cpp  string_matching.cpp  string_matching.h  string_matching_test.cpp
prjs/prog/prblm/codecheff/: ARRANGE2.cpp  ARRANGE2AUX.cpp  ARRTest.cpp  BUTTONS.cpp  COINS.cpp  ECODE.cpp  FACTORY.cpp  HAPPY.py  MARBLES.cpp  MARCHA4.cpp  MAXCROSS.cpp.save  MAXCROSS.cpp.v1.0  MAXCROSSProd.cpp  MAXCROSSProdV1.0.cpp  MAXCROSS_testcase.cpp  (+22 more)
prjs/ps/: bslide.ps  cps  first.ps  fontex.ps  graybox.ps  inchsquarebox.ps  twolines.ps
(+609 files in other folders)
